--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,7 @@ add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
 add_definitions(-DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS)
 include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES} ${KDEPIMLIBS_INCLUDE_DIR})
 
-macro_optional_find_package(LibKonq REQUIRED)
-macro_log_feature(LIBKONQ_FOUND "KDE-Base/LibKonq" "Provides high-level file management functions." "http://dolphin.kde.org/" FALSE "" "Required to build the Dolphin version control plugins.")
+find_package(LibKonq REQUIRED)
 
-if(LIBKONQ_FOUND)
-  macro_optional_add_subdirectory(perforce)
-endif(LIBKONQ_FOUND)
+add_subdirectory(perforce)
 macro_display_feature_log()
